--- a/Survey/src/main/resources/style/accedipoup.css
+++ b/Survey/src/main/resources/style/accedipoup.css
@@ -5,7 +5,6 @@
     color:black;
     background: white;
     border: 2px solid black;
-    right: 10% ;
     position: relative;
     margin-right: 10px;
     
@@ -46,6 +45,10 @@
     font-weight: bold;
     color: #fff;
   }
+  .form-control{
+    margin-bottom: 10px;
+    border: 2px solid black;
+  }
   .login,.signup {
     padding: 6px 20px;
     background: none;
@@ -60,4 +63,9 @@
   .login:hover ,.signup:hover{
     background: black;
     color: #fff;
+  }
+
+  .bottone-menu{
+
+    margin-bottom: 10px;
   }
