--- a/Survey/src/main/resources/style/question-search.css
+++ b/Survey/src/main/resources/style/question-search.css
@@ -1,9 +1,9 @@
-.containerdomande{
+.containeritem{
     
     max-width: 90%;
     margin-left: 5%;
     margin-right: 5%;
-    border-radius: 5%;
+    border-radius: 10px;
     background-color: white;
     border: 2px solid black;
     padding: 50px;
